--- a/application/Views/index/index.twig
+++ b/application/Views/index/index.twig
@@ -9,7 +9,7 @@
                 <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Ricerca</h1>
                 <p class="mb-8 leading-relaxed">Inserisci il codice fiscale dell'azienda per poter generare il relativo
                     file Excel contenente i risultati relativi.</p>
-                <form action="/details" class="flex w-full justify-center items-end" method="post">
+                <form action="/results" class="flex w-full justify-center items-end" method="post">
                     <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
                         <label for="cf" class="leading-7 text-sm text-gray-600">Inserisci Cod. Fiscale</label>
                         <input type="text" id="cf" name="cf"
@@ -17,7 +17,7 @@
                     </div>
                     <input type="submit"
                            class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"
-                           value="Cerca"></input>
+                           value="Cerca"/>
                 </form>
                 <p class="text-sm mt-2 text-gray-500 mb-8 w-full">La ricerca funziona solo inserendo il codice fiscale
                     esatto.</p>
