--- a/application/Views/components/nav.twig
+++ b/application/Views/components/nav.twig
@@ -10,10 +10,10 @@
         </a>
         <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a href="" class="mr-5 hover:text-gray-900">Guida</a>
-            <a href="" class="mr-5 hover:text-gray-900">Upload</a>
+            <a href="/upload" class="mr-5 hover:text-gray-900">Upload</a>
         </nav>
         {% if user_id is defined %}
-            <a href="/logout"
+            <a href="/logout/logout"
                class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Logout
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                      class="w-4 h-4 ml-1" viewBox="0 0 24 24">
