--- a/application/Views/index/index.twig
+++ b/application/Views/index/index.twig
@@ -20,7 +20,7 @@
                            value="Cerca"/>
                 </form>
                 <p class="text-sm mt-2 text-gray-500 mb-8 w-full">La ricerca funziona solo inserendo il codice fiscale
-                    esatto.</p>
+                    esatto. Bisogna essere registrati per effettuare una ricerca.</p>
             </div>
         </div>
     </section>
